--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    <header>
 
       <nav class="navbar_custom navbar navbar-expand-lg ">
-         <a class="navbar-brand" href="#"><img src="assets/images/logo.png"></a>
+         <a class="navbar-brand" href="#"><img src="/assets/images/logo.png"></a>
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
          </button>
