--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    <header>
 
       <nav class="navbar_custom navbar navbar-expand-lg ">
-         <a class="navbar-brand" href="#"><img src="/assets/images/logo.png"></a>
+         <a class="navbar-brand" href="#"><img src="/assets/images/Logo.png"></a>
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
          </button>
@@ -276,7 +276,7 @@
                   <div class="row" id="left-panel">
                      <div class="sticky_wrapper">
                         <div class="sticky_img">
-                           <img src="assets/images/left_img.png">
+                           <img src="assets/images/Left_img.png">
                         </div>
                      </div>
                   </div>
@@ -400,7 +400,7 @@
 
                <div class="col-md-6 col-sm-6 col-lg-3">
                   <div class="training_box">
-                     <img src="assets/images/Asis 1.svg">
+                     <img src="assets/images/ASIS_1.svg">
                      <h4>ASIS CPP Preparatory</h4>
                      <a href="">Learn more<img class="img_arrw" src="assets/images/arrw.svg"></a>
                   </div>
@@ -408,7 +408,7 @@
 
                <div class="col-md-6 col-sm-6 col-lg-3">
                   <div class="training_box">
-                     <img src="assets/images/asis 2.svg">
+                     <img src="assets/images/ASIS_2.svg">
                      <h4>ASIS PSP Preparatory</h4>
                      <a href="">learn more<img class="img_arrw" src="assets/images/arrw.svg"></a>
                   </div>
@@ -416,7 +416,7 @@
 
                <div class="col-md-6 col-sm-6 col-lg-3">
                   <div class="training_box">
-                     <img src="assets/images/asis 3.svg">
+                     <img src="assets/images/ASIS_3.svg">
                      <h4>ASIS PCI Preparatory</h4>
                      <a href="">learn more<img class="img_arrw" src="assets/images/arrw.svg"></a>
                   </div>
@@ -424,7 +424,7 @@
 
                <div class="col-md-6 col-sm-6 col-lg-3">
                   <div class="training_box">
-                     <img src="assets/images/asis 4.svg">
+                     <img src="assets/images/Asis_4.svg 4.svg">
                      <h4>ASIS APP Preparatory</h4>
                      <a href="">Learn more<img class="img_arrw" src="assets/images/arrw.svg"></a>
                   </div>
