--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 
                <div class="col-md-6 col-sm-6 col-lg-3">
                   <div class="training_box">
-                     <img src="assets/images/Asis_4.svg 4.svg">
+                     <img src="assets/images/Asis_4.svg">
                      <h4>ASIS APP Preparatory</h4>
                      <a href="">Learn more<img class="img_arrw" src="assets/images/arrw.svg"></a>
                   </div>
