--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@
             singleItem: true,
             navText: [
                '<img src="assets/images/prev1.png"></img>',
-               '<img src="assets/images/next_1.png"></img>'
+               '<img src="assets/images/prev1.png"></img>'
             ],
             responsive: {
                0: {
